--- a/.env.master
+++ b/.env.master
@@ -6,4 +6,4 @@ REACT_APP_SHARE = 'https://www.bibitrades.net'
 REACT_APP_COIN = 'PHP'
 REACT_APP_AREA = '63'
 REACT_APP_LANGUAGE = 'en'
-REACR_APP_LAND = '2'
+REACT_APP_LAND = '2'
