--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3604085 */
-  src: url('iconfont.woff2?t=1667461117368') format('woff2'),
-       url('iconfont.woff?t=1667461117368') format('woff'),
-       url('iconfont.ttf?t=1667461117368') format('truetype'),
-       url('iconfont.svg?t=1667461117368#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1667543867805') format('woff2'),
+       url('iconfont.woff?t=1667543867805') format('woff'),
+       url('iconfont.ttf?t=1667543867805') format('truetype'),
+       url('iconfont.svg?t=1667543867805#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-a-yaoqingtuiguang2:before {
+  content: "\e63e";
+}
+
+.icon-a-yaoqingtuiguang22:before {
+  content: "\e63f";
 }
 
 .icon-bofangqi-bofang:before {
