--- a/src/views/mine/index.scss
+++ b/src/views/mine/index.scss
@@ -19,6 +19,9 @@
         width: 100%;
         text-align: center;
       }
+      .down-box {
+        display: none;
+      }
     }
     .account-box {
       padding: 12px;
@@ -163,8 +166,38 @@
   .mine-nav-new {
     background: url("../../assets/images/home_new/mine_bg_new.png");
     background-size: 100% 100%;
-    p {
-      color: white;
+    .nav-msg {
+      position: relative;
+      p {
+        color: white;
+      }
+      .down-box {
+        display: flex;
+        right: 12px;
+        top: 6px;
+        position: absolute;
+        width: 54px;
+        height: 30px;
+        padding-top: 2px;
+        background: linear-gradient(
+          90deg,
+          rgba(135, 144, 238, 0.3) 0%,
+          #858eec 100%
+        );
+        border: 1px solid #8790ee;
+        border-radius: 4px;
+        flex-direction: column;
+        .iconfont {
+          font-size: 13px;
+          color: white;
+          transform: scale(1);
+        }
+        p{
+          font-size: 12px;
+          color: rgba(255, 255, 255, 0.8);
+          transform: scale(.8);
+        }
+      }
     }
     .account-box {
       .account-left {
@@ -181,6 +214,7 @@
       }
     }
     .download-box {
+      display: none;
       background: url("../../assets/images/down_mine_new.png");
       background-size: 100% 100%;
       p {
@@ -197,7 +231,7 @@
     padding: 16px;
     box-sizing: border-box;
     background-color: white;
-    margin-top: -68px;
+    margin-top: -98px;
     z-index: 100;
     position: relative;
     .manage-title {
