--- a/src/views/register/index.scss
+++ b/src/views/register/index.scss
@@ -70,6 +70,9 @@
         color: #666;
         font-weight: 500;
         transition: 0.3s all;
+        span {
+          display: none;
+        }
       }
       li:nth-child(2) {
         padding: 0;
@@ -88,11 +91,6 @@
         background-color: #eaf3ff;
         color: #1677ff;
       }
-    }
-  }
-  .register-way-th {
-    .active-intway {
-      color: #00D9B5!important;
     }
   }
   .login-box {
@@ -146,9 +144,6 @@
         right: 12px;
         top: 37px;
       }
-      .send-code-th{
-        color: #00D9B5;
-      }
       .gra-btn {
         filter: grayscale(100%);
       }
@@ -185,19 +180,110 @@
         text-decoration: underline;
       }
     }
-    .read-protocol-th{
-      .need-outline {
-        color: #00D9B5;
-      }
-    }
     .login-btn {
       margin-top: 54px;
     }
-    .register-remark {
-      margin-top: 40px;
-      padding: 12px 14px;
-      background-color: #f8f8f8;
-      border-radius: 4px;
+  }
+  .register-remark {
+    width: calc(100% - 24px);
+    margin: 0 auto;
+    margin-top: 22px;
+    padding: 12px 14px;
+    background-color: #f8f8f8;
+    border-radius: 4px;
+  }
+}
+.register-index-th {
+  .up-bg-box {
+    .register-way {
+      .active-intway {
+        color: #00d9b5;
+      }
+    }
+    .login-box {
+      .box-public {
+        .send-code {
+          color: #00d9b5;
+        }
+      }
+      .read-protocol {
+        .need-outline {
+          color: #00d9b5;
+        }
+      }
+    }
+  }
+}
+.register-index-new {
+  .bg-box {
+    height: 474px;
+    background: url("../../assets/images/int_bg_new.png");
+    background-size: 100% 100%;
+  }
+  .up-bg-box {
+    .page-remark {
+      img {
+        width: 110px;
+        height: 70px;
+      }
+      p {
+        display: none;
+      }
+    }
+    .register-way {
+      ul {
+        li {
+          width: 150px;
+          height: 40px;
+          line-height: 40px;
+          padding: 0;
+          background-color: white;
+          font-size: 14px;
+          color: #9da3c3;
+          span {
+            display: inline-block;
+            font-size: 16px;
+            margin-right: 4px;
+          }
+        }
+        li:first-child {
+          margin-right: 28px;
+        }
+        li:nth-child(2) {
+          display: none;
+        }
+        .active-intway {
+          background-color: #5058c5;
+          color: white;
+        }
+      }
+    }
+    .login-box {
+      width: calc(100% - 24px);
+      margin: 0 auto;
+      margin-top: 30px;
+      background-color: white;
+      border: 1px solid #E0E4FC;
+      padding: 26px 22px;
+      border-radius: 8px;
+      .box-public{
+        p{
+          color: #666;
+        }
+        input{
+          border-radius: 22px;
+        }
+      }
+      .read-protocol{
+        span{
+          color: #1677FF;
+        }
+      }
+      .login-btn{
+        button{
+          background-color: #5058C5;
+        }
+      }
     }
   }
 }
