--- a/src/views/down/index.scss
+++ b/src/views/down/index.scss
@@ -1,4 +1,4 @@
-.down-index {
+.down-index-en {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -6,32 +6,35 @@
   left: 0;
   overflow: auto;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  padding-left: 28px;
+  flex-direction: column;
   justify-content: center;
-  padding-bottom: 100px;
   img {
     width: 100%;
   }
   .click-box-use-to-rem {
+    position: absolute;
+    left: 28px;
+    bottom: 308px;
     z-index: 200;
     text-align: left;
     padding: 8px 14px;
-    background: rgba(122, 234, 206, 0.2);
+    background: rgba(255, 255, 255, 0.21);
+    display: flex;
     margin-top: 16px;
     align-items: center;
+    border-radius: 27px;
     padding-right: 20px;
-    border-radius: 7px;
-    backdrop-filter: blur(1px);
-    display: flex;
-    margin-left: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
     .iconfont {
       font-size: 22px;
-      color: #00a573;
+      color: white;
       margin-right: 8px;
     }
     div {
       p {
-        color: #00a573;
+        color: white;
       }
       p:first-child {
         font-size: 12px;
@@ -85,13 +88,6 @@
         color: #333;
         font-weight: 600;
       }
-    }
-  }
-  .guide-header-th {
-    background: url("../../assets/images/guide_bg_th.png");
-    background-size: 100% 100%;
-    .close-icon {
-      color: #19A76B;
     }
   }
   .guide-box {
@@ -166,6 +162,6 @@
     padding: 0;
   }
 }
-.down-index::-webkit-scrollbar {
+.down-index-en::-webkit-scrollbar {
   display: none;
 }
