--- a/src/views/invite/index.scss
+++ b/src/views/invite/index.scss
@@ -65,6 +65,12 @@
             background-size: 100% 100%;
             font-size: 16px;
             color: white;
+            img{
+              width: 13px;
+              height: 13px;
+              vertical-align: middle;
+              margin-left: 6px;
+            }
           }
           .share-qr {
             width: 44px;
